# spatial-measurements

./: .gitignore  CASESTUDY.md  README.md  REPRODUCE.md  application.yml  batch-load-duckdb.py  docker-compose.yml  makefile  profiles.yml  provision-grid.py  pyproject.toml  scan-and-load.sh  scratch.sql
.github/workflows/: build.yml  ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: measurement_safe.sql  measurement_unsafe.sql
dbt_spatial_config/: dbt_project.yml
dbt_spatial_config/seeds/: grid.csv
dbt_spatial_dwh/: dbt_project.yml
docker-init-scripts/: 01-scanner-writer-provision.sql  02-scanner-config-provision.sql  03-scanner-measurement-table-provision.sql  04-reader-provision.sql  05-measurement-stretched-view.sql  06-dbt-provision.sql
plot-stream/: server.py
plot-stream/static/: index.html  main.js  wafer.js
plot/case-study/band-gap/: band-gap.excalidraw
plot/case-study/mismatch/: table-comparison.csv
plot/case-study/probe-arch/: GENERATING-WAFER-SVGS.md  README.md  probe-arch.excalidraw  tiny-wafer.html  tiny-wafer.js  tiny-wafers.csv
plot/case-study/signature/: signatures.excalidraw
plot/case-study/single-wafer/: SINGLE-WAFER.md  single-wafer-annotated.drawio  single-wafer-annotated.excalidraw  single-wafer.csv  single-wafer.html  single-wafer.js
plot/case-study/six-pack/: SIX-PACK.md  backup.sql  generate-six-pack.py
plot/case-study/timeline/: timeline.excalidraw
plot/case-study/timeline-two-run-clip/: timeline-two-run-clip.excalidraw
plot/plot-stream/: README.md  server.py
scanner/: pom.xml
(+19 files in other folders)
