[project]
name = "spatial-measurements"
version = "0.1.0"
description = ""
authors = [
    {name = "scottmckenzie"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core (>=1.9.4,<2.0.0)",
    "dbt-duckdb (>=1.9.3,<2.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
