[project]
name = "spatial-measurements"
version = "0.1.0"
description = ""
authors = [
    {name = "scottmckenzie"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dbt-core>=1.9.4,<2.0.0",
    "dbt-duckdb>=1.9.3,<2.0.0",
    "polars>=1.29.0,<2.0.0",
    "dbt-postgres>=1.9.0,<2.0.0",
    "duckdb>=1.3.2,<2.0.0",
    "sqlalchemy>=2.0.49",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
]
