[project]
name = "spatial-measurements"
version = "0.1.0"
description = ""
authors = [
    {name = "scottmckenzie"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dbt-core>=1.9.4,<2.0.0",
    "polars>=1.29.0,<2.0.0",
    "dbt-postgres>=1.9.0,<2.0.0",
    "sqlalchemy>=2.0.49",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
]
